<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="60dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/reminder_name"
                android:layout_marginTop="20dp"

                android:textColor="@color/dusty_rose"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/when"
                android:layout_marginTop="20dp"
                android:textColor="@color/dusty_rose"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="0"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/M"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/monday"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/T"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/tuesday"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/W"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/wednesday"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/X"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/thursday"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/F"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/friday"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/A"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/saturday"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/S"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/sunday"
                        />
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/time"
                android:layout_marginTop="20dp"

                android:textColor="@color/dusty_rose"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/time"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/done"
                android:textColor="@color/white"
                android:id="@+id/done"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>
        
    </ScrollView>



</LinearLayout>